<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.projects_details.ProjectDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cultured">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/banner_background"
            android:paddingBottom="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="13dp">

                    <ImageView
                        android:id="@+id/iv_back_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:contentDescription="@string/navigate_back"
                        android:src="@drawable/ic_back_arrow" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="7dp"
                        android:contentDescription="@string/more_options"
                        android:src="@drawable/ic_more_vert" />
                </RelativeLayout>
            </com.google.android.material.appbar.MaterialToolbar>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="5dp"
                android:text="October 25, Mon 2019"
                android:textColor="@color/spotify_green"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/uniform_bold"
                android:text="Music App"
                android:textColor="@color/black"
                android:textSize="38sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_date" />

            <com.mancj.slimchart.SlimChart
                android:id="@+id/iv_progress"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/project_progress_percentage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:roundedEdges="true"
                app:strokeWidth="2dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_user_1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="7dp"
                android:contentDescription="@string/user_image"
                android:src="@drawable/alyona_grishina_unsplash"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_user_2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="7dp"
                android:contentDescription="@string/user_image"
                android:src="@drawable/jassir_jonis_unsplash"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_user_1"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_user_3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="7dp"
                android:contentDescription="@string/user_image"
                android:src="@drawable/prince_akachi_unsplash_2"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_user_2"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_subtask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="6dp"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_banner">

            <ImageView
                android:id="@+id/iv_subtask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:src="@drawable/ic_notifications"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/subtask_icon" />

            <TextView
                android:id="@+id/tv_subtask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/iv_subtask"
                android:text="@string/subtask"
                android:fontFamily="@font/uniform_medium"
                android:textSize="19sp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/add_subtask"
                android:src="@drawable/ic_notifications"
                android:layout_margin="6dp"
                />

            <View
                android:id="@+id/vw_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/lightGrey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_subtask" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>